loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:3: error: illegal start of simple pattern
    for (case <- 1 to 8) {
         ^LoopCourse:7: error: '<-' expected but '}' found.
  }
  ^